--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,19 @@
 #headerImg {
     width: 100%;
     height: 600px;
-    background: url('./imgs/newHeaderLogo.png') no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./imgs/newHeaderLogo.png') no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+#headerText {
+    color: #EBEBEB;
+    margin-top: 50px;
+    padding: 25px;
+    height: 250px;
+    width: 75%;
 }
 
 #getStarted {
@@ -26,7 +34,7 @@
     -o-background-size: cover;
     background-size: cover;
     ;
-    color: white;
+    color: #EBEBEB;
     margin-bottom: 0px;
     padding-bottom: 400px;
     width: 100%;
@@ -40,16 +48,17 @@
 
 */
 
-footer {
+#customFooter {
     background-color: #343a40!important;
     color: #000;
     margin: 0px 0px;
     padding: 5px 5px;
+    border-top: 5px solid darkorange;
 }
 
 #moreInfoFooter,
 #quickLinksFooter {
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 
@@ -78,6 +87,7 @@ body {
 .navbar-brand {
     padding-top: 0px;
     height: 120px;
+    margin-left: 25px;
 }
 
 .navbar {
@@ -99,4 +109,11 @@ body {
     width: 200px;
     margin: 5px;
     background-color: darkorange;
+    border-color: #fff;
+}
+
+.btn:hover,
+.btn-primary:hover {
+    background-color: #110E3B;
+    border-color: #fff;
 }
