able to create accounts again, and populate db. users login now returns first name or null if invalid. Need to get from server rendered to component. res.redirect from server has cors issue.

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,8 @@ body {
 
 .navbar {
     margin-bottom: 0px;
-    background-color: #272727
+    background-color: #272727;
+    border-bottom: 5px solid darkorange;
 }
 
 
