--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ body {
 .navbar-brand {
     padding-top: 0px;
     height: 120px;
-    margin-left: 25px;
+    /* margin-left: 25px; */
 }
 
 .navbar {
